tests/expected_invalid_generic_private_type_leak_field.diag.out
<input>:13:30: error: public API cannot reference private type 'Hidden'
        public box: support::Box<Hidden>,
                                 ^^^^^^
